test/compile_failure/05_break_outside_loop.c
// EXPECT-ERRORS: 1
// EXPECT: break outside loop or switch
int main() {
    break;
    return 0;
}
